--- a/SUPPORTERS.yaml
+++ b/SUPPORTERS.yaml
@@ -18,3 +18,6 @@ supporters:
   github: bobmcwhirter
 - name: Scott M Stark
   github: starksm64
+- name: Max Rydahl Andersen
+  github: maxandersen
+  
