Add kenfinnigan to SUPPORTERS.yaml
Signed-off-by: Ken Finnigan <ken@kenfinnigan.me>

--- a/SUPPORTERS.yaml
+++ b/SUPPORTERS.yaml
@@ -20,4 +20,7 @@ supporters:
   github: starksm64
 - name: Max Rydahl Andersen
   github: maxandersen
-  
+- name: Ken Finnigan
+  github: kenfinnigan
+  social:
+    twitter: kenfinnigan
