--- a/SUPPORTERS.yaml
+++ b/SUPPORTERS.yaml
@@ -20,4 +20,13 @@ supporters:
   github: starksm64
 - name: Max Rydahl Andersen
   github: maxandersen
-  
+- name: Ken Finnigan
+  github: kenfinnigan
+  social:
+    twitter: kenfinnigan
+- name: Karena Angell
+  github: angellk
+  social:
+    twitter: karenaangell
+    linkedin: karenaangell
+
