Broaden definition of membership

--- a/MEMBERS.yaml
+++ b/MEMBERS.yaml
@@ -2,9 +2,9 @@ commonhaus-board:
   - TBD / ...
 commonhaus-council:
   - TBD / ...
+advisory-board:
+  - TBD / ...
 cocp-panel:
-  - TBD / Board member
-  - TBD / Board member
   - TBD / Council member
   - TBD / Council member
   - TBD / Council member
