--- a/.github/workflows/markdown-lint.yaml
+++ b/.github/workflows/markdown-lint.yaml
@@ -22,6 +22,6 @@ jobs:
 
       - id: website-bump
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.ACTIONS_PUBLISH_PAT }}
         run: |
           gh workflow run -R commonhaus/commonhaus.github.io gh-pages.yml
