--- a/.mlc_config.json
+++ b/.mlc_config.json
@@ -14,7 +14,7 @@
       "replacement": "{{BASEURL}}/"
     },
     {
-      "pattern": "^https://.*\\.?website/?",
+      "pattern": "^https://.*\\.?website/?$",
       "replacement": "{{BASEURL}}/"
     }
   ],
