Add @trustin to SUPPORTERS.yaml

--- a/SUPPORTERS.yaml
+++ b/SUPPORTERS.yaml
@@ -29,3 +29,8 @@ supporters:
   social:
     twitter: karenaangell
     linkedin: karenaangell
+- name: Trustin Lee
+  github: trustin
+  social:
+    twitter: trustin
+    linkedin: trustin
