Add Tatu S (@cowtowncoder) as Supporter

--- a/SUPPORTERS.yaml
+++ b/SUPPORTERS.yaml
@@ -34,3 +34,8 @@ supporters:
   social:
     twitter: trustin
     linkedin: trustin
+- name: Tatu Saloranta
+  github: cowtowncoder
+  social:
+    twitter: cowtowncoder
+    linkedin: tatu-saloranta
