update website w/ discussion activity

--- a/.editorconfig
+++ b/.editorconfig
@@ -11,5 +11,5 @@ indent_style = space
 indent_size = 2
 trim_trailing_whitespace = false
 
-[*.{yml,html,js,rb,css,xml,scss}]
+[*.{yaml,yml,html,js,rb,css,xml,scss}]
 indent_size = 2
