fix guard around website bump

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,7 +36,7 @@ jobs:
   bump:
     name: Update website
     needs: lint
-    if: ${{ github.env.MAIN_REPO }}
+    if: ${{ github.ref == 'refs/heads/main' && github.repository == 'commonhaus/foundation-draft' }}
     runs-on: ubuntu-latest
     steps:
       - name: Bump website
