--- a/.mlc_config.json
+++ b/.mlc_config.json
@@ -3,7 +3,7 @@
   "replacementPatterns": [
     {
       "pattern": "^CODEOWNERS",
-      "replacement": "{{BASEURL}}/CODEOWNERS"
+      "replacement": "{{BASEURL}}/.github/CODEOWNERS"
     },
     {
       "pattern": "^TRADEMARKS",
