--- a/.mlc_config.json
+++ b/.mlc_config.json
@@ -10,6 +10,10 @@
       "replacement": "{{BASEURL}}/TRADEMARKS"
     },
     {
+      "pattern": "^CONTRIBUTING",
+      "replacement": "{{BASEURL}}/CONTRIBUTING"
+    },
+    {
       "pattern": "^/",
       "replacement": "{{BASEURL}}/"
     },
