Adding Sanne among supporters

--- a/SUPPORTERS.yaml
+++ b/SUPPORTERS.yaml
@@ -39,3 +39,12 @@ supporters:
   social:
     twitter: cowtowncoder
     linkedin: tatu-saloranta
+- name: Sanne Grinovero
+  github: Sanne
+  social:
+    twitter: SanneGrinovero
+    mastodon: @sanne@fosstodon.org
+    bluesky: @sannegrinovero.bsky.social
+    linkedin: sannegrinovero
+    website: https://in.relation.to/sanne-grinovero
+
