--- a/.github/workflows/notice.yaml
+++ b/.github/workflows/notice.yaml
@@ -25,6 +25,6 @@ jobs:
     steps:
     - name: Bump website
       env:
-        GH_TOKEN: ${{ github.token }}
+        GH_TOKEN: ${{ secrets.ACTIONS_PUBLISH_PAT }}
       run: |
         gh workflow run -R commonhaus/commonhaus.github.io gh-pages.yml
