--- a/.github/cf-automation.yml
+++ b/.github/cf-automation.yml
@@ -1,16 +1,20 @@
 notice:
   discussion:
     rules:
-      - # If a discussion is created in the Announcements or Reviews
+      - # If a discussion is created in the Announcements or Reviews 
         # category, apply the notice label
         category: [Announcements, Reviews]
         action: [created, category_changed]
         then: [label_notice]
+      - # If the notice label is added to a discussion,
+        # send email
+        action: [labeled]
+        label: [notice]
+        then: [email_activity]
   pull_request:
     rules:
-      - # If a pull request is created that touches bylaws or policies
-        # that does not have the notice label:
-        # - apply the notice label
+      - # If a pull request modifies bylaws or policies
+        # apply the notice label
         action:
           - opened
           - edited
@@ -18,7 +22,13 @@ notice:
         paths:
           - bylaws/*
           - policies/*
-        label: ["!notice"]
         then: [label_notice]
+      - # If a pull request is labeled with notice,
+        # send an email to email_activity
+        action: [labeled]
+        label: [notice]
+        then: [email_activity]
   actions:
     label_notice: [notice]
+    email_activity: 
+      address: test@commonhaus.org
