--- a/.github/cf-automation.yml
+++ b/.github/cf-automation.yml
@@ -3,7 +3,9 @@ notice:
     rules:
       - # If a discussion is created in the Announcements or Reviews 
         # category, apply the notice label
-        category: [Announcements, Reviews]
+        category: 
+          - Announcements
+          - Consensus Building
         action: [created, category_changed]
         then: [label_notice]
       - # If the notice label is added to a discussion,
