Adding Andres among supporters

--- a/SUPPORTERS.yaml
+++ b/SUPPORTERS.yaml
@@ -47,4 +47,11 @@ supporters:
     bluesky: "@sannegrinovero.bsky.social"
     linkedin: sannegrinovero
     website: https://in.relation.to/sanne-grinovero
-
+- name: Andres Almiray
+  github: aalmiray
+  social:
+    twitter: aalmiray
+    mastodon: "@aalmiray@mastodon.social"
+    bluesky: "@aalmiray.bsky.social"
+    linkedin: aalmiray
+    website: https://andresalmiray.com
