👷 Update cf-automation.yml

--- a/.github/cf-automation.yml
+++ b/.github/cf-automation.yml
@@ -22,6 +22,7 @@ notice:
           - edited
           - closed
         paths:
+          - agreements/*
           - bylaws/*
           - policies/*
         then: [label_notice]
