--- a/.github/workflows/notice.yaml
+++ b/.github/workflows/notice.yaml
@@ -2,7 +2,6 @@ name: Push discussions and PR activity to commonhaus.github.io
 
 on:
   discussion:
-  issue_comment:
   pull_request_target:
     types: [opened, edited, reopened, closed]
     paths:
@@ -20,13 +19,18 @@ on:
       - 'policies/**'
   workflow_dispatch:
 
+permissions: {}
+
 jobs:
   update-website:
     runs-on: ubuntu-latest
     if: github.repository == 'commonhaus/foundation-draft'
+    permissions:
+      actions: read
     steps:
     - name: Bump website
       env:
         GH_TOKEN: ${{ secrets.ACTIONS_PUBLISH_PAT }}
+        EVENT: ${{ github.event }}
       run: |
-        gh workflow run -R commonhaus/commonhaus.github.io gh-pages.yml
+        echo $EVENT | jq '{ "client_payload": . }' | gh workflow run -R commonhaus/commonhaus.github.io gh-pages.yml --json
