--- a/.github/workflows/notice.yaml
+++ b/.github/workflows/notice.yaml
@@ -33,4 +33,4 @@ jobs:
         GH_TOKEN: ${{ secrets.ACTIONS_PUBLISH_PAT }}
         EVENT: ${{ github.event }}
       run: |
-        echo $EVENT | jq '{ "client_payload": . }' | gh workflow run -R commonhaus/commonhaus.github.io gh-pages.yml --json
+        gh workflow run -R commonhaus/commonhaus.github.io push-content.yml
