--- a/.github/workflows/voting.yaml
+++ b/.github/workflows/voting.yaml
@@ -19,4 +19,4 @@ jobs:
         GH_TOKEN: ${{ secrets.ACTIONS_PUBLISH_PAT }}
         EVENT: ${{ github.event }}
       run: |
-        echo $EVENT | jq '{ "client_payload": . }' | gh workflow run -R commonhaus/commonhaus.github.io gh-pages.yml --json
+        echo $EVENT | jq '{ "client_payload": . }' | gh workflow run -R commonhaus/commonhaus.github.io push-votes.yml --json
