--- a/.github/DISCUSSION_TEMPLATE/consensus-building.yml
+++ b/.github/DISCUSSION_TEMPLATE/consensus-building.yml
@@ -36,11 +36,7 @@ body:
       label: Consensus mechanism
       description: |
         Describe how you would like readers to interact with this proposal.
-        Include an HTML comment that describes how/which reactions should be counted.
-        Valid values: +1, -1, confused, eyes, laugh, heart, hooray, rocket.
       value: |
-        <!--vote::marthas approve="+1" ok="eyes" revise="-1" -->
-
         Please use emoji reactions to indicate your support:
         - **👍 (:+1:)** if it looks good to you
         - **👀 (:eyes:)** if you're "ok" with it (it may not be your favorite)
@@ -49,3 +45,15 @@ body:
         Ask questions or raise concerns in comments.
     validations:
       required: true
+  - type: dropdown
+    attributes:
+      label: Vote counting instructions
+      description: |
+        Include an HTML comment that describes how/which reactions should be counted.
+        Valid values: +1, -1, confused, eyes, laugh, heart, hooray, rocket.
+        This should be edited (after item is created) to match the content above, if necessary.
+      multiple: false
+      options:
+        - "<!--vote::marthas approve="+1" ok="eyes" revise="-1" -->"
+        - "<!--vote::manual -->"
+      default: 1      
