--- a/.github/workflows/voting.yaml
+++ b/.github/workflows/voting.yaml
@@ -29,6 +29,9 @@ jobs:
           COMMENT_ID=$INPUT
         elif [[ "$SENDER" != "haus-rules-bot[bot]" ]]; then
           echo "Comment skipped. Not bot sender"
-          exit 0
+          COMMENT_ID=
         fi
-        echo "{\"comment_id\": \"${COMMENT_ID}\"}" | gh workflow run -R commonhaus/commonhaus.github.io push-votes.yml --json
+
+        if [[ -z "$COMMENT_ID" ]]; then
+          echo "{\"comment_id\": \"${COMMENT_ID}\"}" | gh workflow run -R commonhaus/commonhaus.github.io push-votes.yml --json
+        fi
