adding jbang for bootstrap
Signed-off-by: Max Rydahl Andersen <max@xam.dk>

--- a/CONTACTS.yaml
+++ b/CONTACTS.yaml
@@ -20,8 +20,9 @@ cf-council:
 #   url: URL to github/gitlab organization
 #   gh-id: project representatives's github id
 egc:
-  - name: ...
-    gh-id: ...
+  - name: jbang
+    url: https://github.com/jbangdev
+    gh-id: maxandersen
   - name: ...
     gh-id: ...
 
