--- a/.github/workflows/voting.yaml
+++ b/.github/workflows/voting.yaml
@@ -14,7 +14,7 @@ permissions: {}
 jobs:
   update-vote:
     runs-on: ubuntu-latest
-    if: github.repository == 'commonhaus/foundation-draft'
+    if: github.repository == 'commonhaus/foundation'
     permissions:
       actions: read
     steps:
