jreleaser bootstrapping agreement, 2024-03-13
Signed-off-by: Andres Almiray <aalmiray@gmail.com>

--- a/CONTACTS.yaml
+++ b/CONTACTS.yaml
@@ -23,6 +23,9 @@ egc:
   - name: jbang
     url: https://github.com/jbangdev
     gh-id: maxandersen
+  - name: jreleaser
+    url: https://github.com/jreleaser
+    gh-id: aalmiray
   - name: ...
     gh-id: ...
 
