--- a/SUPPORTERS.yaml
+++ b/SUPPORTERS.yaml
@@ -55,3 +55,9 @@ supporters:
     bluesky: "@aalmiray.bsky.social"
     linkedin: aalmiray
     website: https://andresalmiray.com
+- name: Rachelle Palmer
+  github: techbelle
+  social:
+    twitter: techbelle
+    linkedin: rachellepalmer
+
