Allow cross-reference

--- a/CONTACTS.yaml
+++ b/CONTACTS.yaml
@@ -1,6 +1,6 @@
 #--------------------------------------------------------------------------
 # CF Council members (elected, staggered elections)
-# name, avatarUrl, company, description will be pulled from GitHub profile
+# name, avatarUrl, company, bio will be pulled from GitHub profile
 #
 # - login: github login
 #   term-start: most recent year of election
@@ -23,6 +23,8 @@ cf-council:
 
 #--------------------------------------------------------------------------
 # EGC Project Representatives (appointed by project governance process)
+# name, avatarUrl, company, bio will be pulled from GitHub profile
+#
 # - project: Project name (match key in PROJECTS.yaml)
 #   login: project representatives's github id
 #   avatarAlt: Optional. Avatar to show in addition to github avatar
@@ -40,10 +42,12 @@ egc:
 
 #--------------------------------------------------------------------------
 # Advisory Board members (appointed)
+# name, avatarUrl, company, bio will be pulled from GitHub profile
+#
 # - organization: Name (should match name in ...)
 #   login: representative's github id
 #   avatarAlt: Optional. Avatar to show in addition to github avatar
-#   description: Short description/bio to use instead of GH profile description
+#   bio: Short description/bio to use instead of GH profile description
 #
 advisory-board:
   - organization: Name
@@ -53,14 +57,21 @@ advisory-board:
 
 #--------------------------------------------------------------------------
 # Code of Conduct Panel members:
+# name, avatarUrl, company, bio will be pulled from GitHub profile
+#
 # - login: github id
 #   term-start: most recent year of election
 #   avatarAlt: Optional. Avatar to show in addition to github avatar
-#   description: Short description/bio to use instead of GH profile description
+#   bio: Short description/bio to use instead of GH profile description
+#
+# - login: github id
+#   term-start: most recent year of election
+#   see: other group to reference
 #
 cocp-panel:
   - login: ebullient
     term-start: 2024
+    see: cf-council
   - login: ...
     term-start: ...
   - login: ...
