🌱 Replace Mark with Ken on existing CFC

--- a/CONTACTS.yaml
+++ b/CONTACTS.yaml
@@ -16,7 +16,7 @@ cf-council:
     avatarAlt: >-
       https://www.ebullient.dev/images/devoxx-uk-2022-tiny.jpeg
     role: Chair
-  - login: nmcl
+  - login: kenfinnigan
     term-start: 2023
   - ...
   - ...
