--- a/SUPPORTERS.yaml
+++ b/SUPPORTERS.yaml
@@ -60,4 +60,8 @@ supporters:
   social:
     twitter: techbelle
     linkedin: rachellepalmer
-
+- name: Gavin King
+  github: gavinking
+  social:
+    twitter: 1ovthafew
+    linkedin: gavinking
