--- a/SUPPORTERS.yaml
+++ b/SUPPORTERS.yaml
@@ -65,3 +65,14 @@ supporters:
   social:
     twitter: 1ovthafew
     linkedin: gavinking
+- name: Mark Little
+  github: nmcl
+  social:
+    twitter: nmcl
+    linkedin: mark-little-3545a3
+- name: Yoann Rodière
+  github: yrodiere
+- name: Justin Lee
+  github:  evanchooly
+- name: Cesar Saavedra
+  github: cealsair
