Add bootstrapping agreement for Jackson
Signed-off-by: Tatu Saloranta <tatu.saloranta@iki.fi>

--- a/CONTACTS.yaml
+++ b/CONTACTS.yaml
@@ -39,6 +39,8 @@ egc:
     login: evanchooly
   - project: openrewrite
     login: jkschneider
+  - project: jackson
+    login: cowtowncoder
   - project: ...
     login: ...
 
