Add bootstrapping agreement for Jackson

--- a/CONTACTS.yaml
+++ b/CONTACTS.yaml
@@ -37,6 +37,8 @@ egc:
     login: aalmiray
   - project: morphia
     login: evanchooly
+  - project: jackson
+    login: cowtowncoder
   - project: ...
     login: ...
 
