--- a/CONTACTS.yaml
+++ b/CONTACTS.yaml
@@ -41,6 +41,7 @@ egc:
     login: jkschneider
   - project: jackson
     login: cowtowncoder
+    avatarAlt: https://raw.githubusercontent.com/FasterXML/jackson/master/images/cowtowncoder-2013-06-19.jpg
   - project: ...
     login: ...
 
