Update CONTACTS.yaml -- hello!

--- a/CONTACTS.yaml
+++ b/CONTACTS.yaml
@@ -97,6 +97,7 @@ mailing-list:
   coc-escalation: coc-escalation@commonhaus.org
   council: cf-council@commonhaus.org
   egc: cf-egc@commonhaus.org
+  hello: hello@commonhaus.org
   legal: legal@commonhaus.org
   report: report@commonhaus.org
   trademarks: legal@commonhaus.org
