Add linked in, tweak sponsor and FAQ text

--- a/.mlc_config.json
+++ b/.mlc_config.json
@@ -31,5 +31,8 @@
     429,
     500,
     503
-  ]
+  ],
+  "httpHeaders": {
+    "User-Agent": "Mozilla/5.0 (Windows; U; Windows NT 5.1; de; rv:1.9.2.3) Gecko/20100401 Firefox/3.6.3"
+  }
 }
