Add more socials for Ken, and provide custom bio for website
Signed-off-by: Ken Finnigan <ken@kenfinnigan.me>

--- a/CONTACTS.yaml
+++ b/CONTACTS.yaml
@@ -18,6 +18,7 @@ cf-council:
     role: Chair
   - login: kenfinnigan
     term-start: 2023
+    bio: Open source engineer, observability, OpenTelemetry, author, amateur genealogist. Currently lumigo.io
   - ...
   - ...
 
