--- a/SUPPORTERS.yaml
+++ b/SUPPORTERS.yaml
@@ -24,6 +24,10 @@ supporters:
   github: kenfinnigan
   social:
     twitter: kenfinnigan
+    linkedin: kenfinnigan
+    mastodon: "@kenfinnigan@fosstodon.org"
+    bluesky: "kenfinnigan.bsky.social"
+    website: https://kenfinnigan.me/
 - name: Karena Angell
   github: angellk
   social:
